# miransas-db

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh.backup  justfile
.config/: api.json  deny.toml  nextest.toml
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml  README.md  check_output.txt
backend/migrations/: 20260419000100_create_internal_tables.sql  20260421000100_restructure.sql  20260421000200_user_config.sql
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  services.rs  state.rs
backend/src/handlers/: admin.rs  audit.rs  auth.rs  databases.rs  health.rs  mod.rs  project.rs  projects.rs  query.rs  schema.rs  secrets.rs  users.rs
backend/src/middleware/: auth.rs  auth_layer.rs
backend/src/models/: mod.rs  project.rs  query.rs
backend/src/services/: audit.rs  databases.rs  db.rs  mod.rs  projects.rs  query.rs  schema.rs  shared.rs  users.rs
backend/src/utils/: crypto.rs
backend/tests/: http.rs
docker/: Dockerfile  docker-compose.yml
src/: main.rs
